src/styles/_hero.scss
.hero {
  position: relative;
  border-top: 2px solid $color-main;
  border-bottom: 2px solid $color-main;
  .projects-link {
    display: flex;
    flex-direction: column;
    align-items: center;
    .projects {
      display: inline-block;
      width: auto;
      padding: 1px $link-px 3px;
      margin-bottom: 8px;
      transition: 0.2s all ease-in-out;
    }
    .pointer {
      display: inline-block;
      width: auto;
      font-size: 40px;
      line-height: 1;
      transition: 0.2s all ease-in-out;
    }
    &:hover {
      background-color: transparent;
    }
    &:hover .projects {
      text-decoration: none;
      color: #fff;
      background-color: $color-main;
    }
    &:hover .pointer {
      color: $color-main;
      background-color: transparent;
      transform: translateY(10px);
    }
  }
}
.hero-heading {
  font-size: 40px;
  line-height: 40px;
}
.hero-wrapper {
  position: relative;
  z-index: 9;
}
.social-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
}
.icon {
  position: relative;
  fill: $color-main;
  &.icon-mail {
    width: 25px;
    height: 25px;
  }
  &.icon-linkedin {
    width: 26px;
    height: 26px;
    bottom: 2px;
  }
  &.icon-github {
    width: 24px;
    height: 24px;
  }
}
.social {
  margin: 20px 0 25px;
  li {
    margin: 0 8px;
  }
  a {
    display: flex;
    padding: 4px 4px 2px;
    &:hover .icon {
      fill: #fff;
    }
  }
}

// CELLULAR AUTOMATA
.automata-wrap {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}
.cell-row {
  opacity: 0;
  transition: 0.2s all ease-in-out;
  &.show {
    opacity: 1;
  }
  .true {
    background-color: rgba($color-main, 0.05);
  }
}
.automata-selector {
  margin: 4px 10px 0;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  * {
    font-size: 12px;
    line-height: 1;
  }
  a {
    position: relative;
    padding: 2px 4px;
    margin-left: 20px;
    &.active:after {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      height: 1px;
      width: 100%;
      background-color: $color-main;
    }
  }
}

